--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, html {
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>Nếu chữ ít hơn 100 từ 1 trang thì chúng tôi sẽ tính giá: 40.000đ cho trang đấy</i></p>
     </div>
-    <img src="tinhtrang.png" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="tinhtrang.PNG" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Trong ảnh gồm:</strong> 1 trang đầy A4 và 1 trang nửa A4</p>
     <p><strong>Tổng giá cho 2 trang như ảnh là:</strong> 240.000đ</p>
     <p><strong>Sau khi quý khách chuyển khoản trước 50% chúng tôi sẽ nhận đơn của quý khách và thông báo thời gian dịch cho quý khách.</strong></p>
