--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ body, html {
     </div>
     <img src="tinhtrang.PNG" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Trong ảnh gồm:</strong> 1 trang đầy A4 và 1 trang nửa A4</p>
-    <p><strong>Tổng giá cho ảnh là:</strong> 845 từ/300= 2.8 trang, chẵn là 3 trang nên giá là: 240.000đ</p>
+    <p><strong>Tổng số từ là:</strong> 845 từ với mỗi 300 từ là 80.000đ</p>
+    <p><strong>Tổng số trang theo chuẩn 300 từ/trang:</strong> 845 từ/300 =2.8, chúng tôi sẽ làm tròn thành 3 trang</p>
+    <p><strong>Tổng giá cho sản phầm trên là:</strong> 240.000đ</p>
     <p><strong>Sau khi quý khách chuyển khoản trước 50% chúng tôi sẽ nhận đơn của quý khách và thông báo thời gian dịch cho quý khách.</strong></p>
   </div>
 </div>
