--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ body, html {
   <div class="w3-panel w3-leftbar w3-light-grey">
     <p><span class="w3-tag">Facebook:</span></p>
     <a href="https://www.facebook.com/pham.khoi.758399">https://www.facebook.com/pham.khoi.758399</a>
+    <p><span class="w3-tag">E-mail:</span></p>
+    <p>kenjenor1@gmail.com</p>
     <p><span class="w3-tag">Thông tin chuyển khoản:</span></p>
     <p>Số tài khoản:060085139854</p>
     <p>Ngân hàng:Sacombank</p>
