--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, html {
     <p>Cách tính trang được cố định bằng Font và Size chữ trên mỗi tờ như sau: </p>
     <p>Fontchữ:Times New Roman</p>
     <p>Size chữ là: 14px</p>
-    <p>Giá: 300 từ/80.000đ</p>
+    <p>Giá: 300 từ/80.000đ (không bao gồm chỉnh sửa bố cục)</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>Nếu chữ ít hơn 100 từ 1 trang thì chúng tôi sẽ tính giá: 40.000đ cho trang đấy</i></p>
     </div>
