--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@ body, html {
     <p><span class="w3-tag">E-mail:</span></p>
     <p>kenjenor1@gmail.com</p>
     <p><span class="w3-tag">Thông tin chuyển khoản:</span></p>
-    <p>Số tài khoản:060085139854</p>
-    <p>Ngân hàng:Sacombank</p>
+    <p>Số tài khoản:22497807</p>
+    <p>Ngân hàng:ACB (Ngân hàng thương mại cổ phần Á Châu)</p>
+    <p>Chi nhánh: ACB - PGD HAI BA TRUNG</p>
     <p>Người thụ hưởng:NGUYEN VAN BINH</p>
   </div>
     <form action="/action_page.php" target="_blank">
