--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, html {
     <p>Size chữ là: 14px</p>
     <p>Giá: 300 từ/80.000đ (không bao gồm chỉnh sửa bố cục)</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>Nếu chữ ít hơn 100 từ 1 trang thì chúng tôi sẽ tính giá: 40.000đ cho trang đấy</i></p>
+      <p><i>Nếu chữ ít hơn 100 từ 1 file thì chúng tôi sẽ tính giá: 40.000đ cho file đấy</i></p>
     </div>
     <img src="tinhtrang.PNG" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Trong ảnh gồm:</strong> 1 trang đầy A4 và 1 trang nửa A4</p>
